# kikou

./: .gitignore  README.md  devenv.nix  eslint.config.mts  flake.nix  jest.config.js  jest.setup.js  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/instructions/: ts.tests.instructions.md
.github/prompts/: commit-message.prompt.md
.github/workflows/: build.yml  cargo.yml  copilot-setup-steps.yml  devcontainer-build.yml  frontend.yml  lint.yml  nix-build.yml  release.yml
.zed/: tasks.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/archive/: commands.rs  event.rs  manager.rs  mod.rs  reader.rs  types.rs  watcher.rs  writer.rs
src-tauri/src/comicinfo/: commands.rs  info.rs  mod.rs  page.rs  types.rs
src/api/: getBookmarkedPages.ts  getCbzFileData.ts  savePageSettings.ts  streamFileData.ts  watchForArchiveCreation.ts
src/components/: PageWrapperFactory.tsx
src/contexts/: ArchiveContext.tsx  NavigationContext.tsx  PageSettingsContext.tsx  RecentComicFilesContext.tsx  ThemeContext.tsx
src/hooks/: useArchiveEvents.ts  useArchiveValidation.ts  useBookmarkedFiles.ts  useComicInfo.ts  useComicInfoXML.ts  useImageFiles.ts  useImageZoom.ts  usePreviewCache.ts  useResetNavigation.ts  useStorageManager.ts  useStreamPreviews.ts  useXmlEditorUI.ts
src/pages/: _app.tsx  _document.tsx  index.tsx
src/styles/: globals.css
src/test-utils/: testUtils.tsx
(+78 files in other folders)
