[package]
name = "Kikou"
version = "0.1.0"
description = "Kikou: Your All-in-One Hub for Organizing, Tagging, and Managing eBooks & Comics"
authors = ["Kevin Hellemun"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.86.0"
default-run = "Kikou"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
zip = "0.6"
quick-xml = { version = "0.31", features = ["serialize"] }
serde-xml-rs = "0.8.1"
notify = "8"
once_cell = "1"
tempfile = "3.23.0"
base64 = "0.22"
